# AdventOfCode2023

./: .gitignore  Cargo.toml  Readme.md
aoc/: Cargo.toml  Readme.md
aoc/benches/: bench.rs
aoc/src/: day_1.rs  day_5.rs  helper.rs  main.rs
aoc_macro/: Cargo.toml
aoc_macro/src/: lib.rs
benches/: bench.rs
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  helper.rs  lib.rs  main.rs
template/: day_N.rs
