[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"


[dependencies]
argh = "0.1.10"
arrayvec = "0.7.2"
bitmaps = "3.2.0"
bitvec = "1.0.1"
colored = "2.0.0"
criterion-cycles-per-byte = "0.4.0"
criterion-perf-events = "0.3.0"
fnv = "1.0.7"
aoc_macro = { path = "./aoc_macro" }
itertools = "0.10.5"
tikv-jemallocator = "0.5"
# perfcnt = "0.8.0"
# rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
