[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true

[profile.release]
debug = true
# lto = "fat"
# codegen-units = 1
panic = "abort"


[dependencies]
argh = "0.1.10"
arrayvec = "0.7.4"
colored = "2.0.0"
aoc_macro = { path = "./aoc_macro" }
itertools = "0.10.5"
ahash = "0.8.6"
num = "0.4.1"
nohash-hasher = "0.2.0"
ndarray = "0.15.6"
ndarray-linalg = { version="0.16.0", features = ["intel-mkl"]}
rustworkx-core = "0.13.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"], default-features = false }
criterion-cycles-per-byte = "0.4.0"
criterion-perf-events = "0.3.0"

[[bench]]
name = "bench"
harness = false
